DSND-2868: Ensure DataMapHolder present in logger calls
* Reformatted code in main/java
* Remove context from logger calls as already present in log map